--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ venv/
 .env.*
 backend/.env
 !.env.example
+frontend/.env
+frontend/node_modules/
 
 # =========================
 # Database / Secrets
